--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AnonymousGrading"
         tools:targetApi="31">
         <activity
+            android:name=".ClassRosterActivity"
+            android:exported="false" />
+        <activity
             android:name=".AddCourseActivity"
             android:exported="false" />
         <activity
@@ -22,10 +25,10 @@
             android:name=".registration"
             android:exported="false" />
         <activity
-            android:name=".MainActivity2"
+            android:name=".WelcomeActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
