--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,17 @@
         android:theme="@style/Theme.AnonymousGrading"
         tools:targetApi="31">
         <activity
+            android:name=".ClassListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ClassRosterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GradedClass"
+            android:exported="false"
+            android:label="@string/title_activity_graded_class_view"
+            android:theme="@style/Theme.AnonymousGrading" />
+        <activity
             android:name=".AddExam"
             android:exported="false" />
         <activity
