--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,19 @@
             android:exported="false" />
         <activity
             android:name=".AddCourseActivity"
-            android:exported="false" />
+            android:exported="false" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.GET_CONTENT" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.OPENABLE" />
+
+                <data android:mimeType="*/*" />
+            </intent-filter>
+
+        </activity>
+
         <activity
             android:name=".scanqr"
             android:exported="false" />
